# rls-digital-twin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTALL.md  README.md  pyproject.toml  setup.sh  vis.md
examples/: README.md
examples/manipulation/: move_arm_joints.py  replay_open_fridge_trajectory.py  vamp_collision.py  whole_body_ik.py  whole_body_mp.py
examples/navigation/: base_movement.py  go_to_target_position.py
fetch/: __init__.py  fetch.py  whole_body_controller.py
fetch/utils/: control_utils.py  ik_solver_utils.py  replanning_utils.py  transform_utils.py  whole_body_ik_utils.py
mp_collision_models/: chair.ply  chair_2.ply  coffee_table.ply  little_sofa.ply  sofa.ply  wall.ply  workstation.ply
resources/mp_collision_models/: chair_3.ply  open_kitchen.ply  rls_2.ply  sofa_chair.ply  table.ply  tall_chair.ply
rls_fetch_ws/: .gitignore
rls_fetch_ws/src/apps/low_level_planning/: package.xml
rls_fetch_ws/src/apps/low_level_planning/config/: amcl.yaml  costmap_common.yaml  robot_localization_ekf.yaml  robot_localization_ekf_gazebo.yaml
rls_fetch_ws/src/apps/low_level_planning/config/fetch/: move_base.yaml
rls_fetch_ws/src/apps/low_level_planning/docs/: robot_localization_setup.md
rls_fetch_ws/src/apps/low_level_planning/launch/: build_map.launch  fetch_control_drivers.launch  fetch_control_gazebo.launch  moveit_test.launch  rls_env.launch
rls_fetch_ws/src/apps/low_level_planning/launch/include/: move_base.launch.xml  robot_localization.launch.xml
rls_fetch_ws/src/apps/low_level_planning/maps/: digital_twin_map.pgm  digital_twin_map.yaml
rls_fetch_ws/src/apps/low_level_planning/rviz/: robot_rls_demo.rviz
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/: CMakeLists.txt  package.xml
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/config/: fetch_move_base.yaml  whole_body_controller.yaml  whole_body_controller_chained.yaml  whole_body_controller_mpc.yaml
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/launch/: whole_body_controller.launch
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/scripts/: whole_body_controller_chained  whole_body_controller_mpc
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/src/fetch_test/: arm_pose_test.py  arm_v2_pose_test.py
rls_fetch_ws/src/drivers/fetch_drivers/fetch_drivers/src/fetch_whole_body_controller/: whole_body_controller.cpp  whole_body_controller.h  whole_body_controller_chained.py  whole_body_controller_mpc.py  whole_body_controller_node.cpp
rls_fetch_ws/src/libraries/rls_control_msgs/: package.xml
rls_fetch_ws/src/libraries/rls_perception_msgs/: package.xml
rls_fetch_ws/src/libraries/rls_perception_msgs/msg/: ObservationDESPOT.msg
rls_fetch_ws/src/libraries/rls_perception_msgs/srv/: MaskSegmentation.srv  TableSegmentation.srv
rls_fetch_ws/src/services/perception_services/audio_localization_service/src/: tuning.py
rls_fetch_ws/src/services/perception_services/bbox_segmentation_service/: package.xml
rls_fetch_ws/src/services/perception_services/object_detection_service/: CMakeLists.txt  package.xml
rls_fetch_ws/src/services/perception_services/object_detection_service/script/: object_detection_srv.py
rls_fetch_ws/src/services/perception_services/pcl_segmentation_service/: package.xml
rls_fetch_ws/src/services/perception_services/pcl_segmentation_service/include/pcl_segmentation_service/: marker_generator.h
rls_fetch_ws/src/services/perception_services/pcl_segmentation_service/launch/: fetch_small_tabletop_segmentation.launch  fetch_static_tf.launch
rls_fetch_ws/src/services/perception_services/pcl_segmentation_service/src/: marker_generator.cpp  mask_segmentor.cpp  table_segmentor.cpp
rls_fetch_ws/src/services/perception_services/pcl_segmentation_service/test/: test_table_segmentation.py
rls_fetch_ws/src/services/planning_services/move_to_person_service/: CMakeLists.txt
rls_fetch_ws/src/services/planning_services/rls_push/push_net/: package.xml
rls_fetch_ws/src/services/planning_services/rls_push/push_net/src/push_net/rss_real_result/: banana_w_nomem.json  banana_w_simcom.json  banana_wxy_nomem.json  banana_wxy_simcom.json  bowl_xy_nomem.json  bowl_xy_simcom.json  clamp_xy_nomem.json  clamp_xy_simcom.json  cup_xy_nomem.json  cup_xy_simcom.json  drill_w_nomem.json  drill_w_simcom.json  (+26 more)
rls_fetch_ws/src/services/planning_services/rls_push/rls_push_msgs/: package.xml
rls_fetch_ws/src/services/planning_services/rls_push/rls_push_msgs/msg/: Table.msg
rls_fetch_ws/src/services/planning_services/rls_push/rls_push_msgs/srv/: TabletopSegmentation.srv  UpdateStatic.srv
rls_fetch_ws/src/services/planning_services/rls_push/robot_push_service/: package.xml
rls_fetch_ws/src/services/utility_services/location_service/: CMakeLists.txt  package.xml
tools/: mesh2pcd.py
